<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGroundColor"
    android:orientation="vertical">


    <TextView
        style="@style/text_title_style"
        android:text="@string/wizard1_title" />

    <ImageView style="@style/devide_line_style" />


    <TextView
        android:layout_marginTop="8dp"
        style="@style/text_content_style"
        android:text="@string/wizard1_content_include"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:orientation="horizontal" >

        <ImageView style="@style/image_star_style" />

        <TextView
            style="@style/text_content_style"
            android:paddingTop="2dip"
            android:text="@string/wizard1_content_sim" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:orientation="horizontal" >

        <ImageView style="@style/image_star_style" />

        <TextView
            style="@style/text_content_style"
            android:paddingTop="2dip"
            android:text="@string/wizard1_content_gps" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:orientation="horizontal" >

        <ImageView style="@style/image_star_style" />

        <TextView
            style="@style/text_content_style"
            android:paddingTop="2dip"
            android:text="@string/wizard1_content_teldeletedata" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:orientation="horizontal" >

        <ImageView style="@style/image_star_style" />

        <TextView
            style="@style/text_content_style"
            android:paddingTop="2dip"
            android:text="@string/wizard1_content_tellock" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageView style="@style/image_status_on_style" />

        <ImageView style="@style/image_status_off_style" />

        <ImageView style="@style/image_status_off_style" />

        <ImageView style="@style/image_status_off_style" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_marginTop="10dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/setup1" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:id="@+id/bt_next"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:drawableRight="@drawable/next"
            android:text="下一步" />
    </RelativeLayout>
</LinearLayout>